1-argocd-apps/apps-base/helloworld/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: base-masterapp-ingress
  namespace: apps-base
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`helloworld.kswap.local.arsa.dev`)
      services:
        - name: base-helloworld-service
          port: 80
  tls: {}
    # secretName: tls.sem-ugr-k8s.arsahosting.com
